--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "d3": "~3.4.9",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "parse-js-sdk": "~1.2.16"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
