--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-route": "1.2.15",
     "d3": "~3.4.9",
     "bootstrap": "~3.2.0",
-    "parse-js-sdk": "~1.2.16"
+    "parse-js-sdk": "~1.2.16",
+    "ng-table": "~0.3.3",
+    "angular-bootstrap": "~0.11.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
