--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "bootstrap": "~3.2.0",
     "parse-js-sdk": "~1.2.16",
     "ng-table": "~0.3.3",
-    "angular-bootstrap": "~0.11.0"
+    "angular-bootstrap": "~0.11.0",
+    "ng-grid": "~2.0.11"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
