--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "parse-js-sdk": "~1.2.16",
     "ng-table": "~0.3.3",
     "angular-bootstrap": "~0.11.0",
-    "ng-grid": "~2.0.11"
+    "ng-grid": "~2.0.11",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
